# TextPaint

./: .gitignore  CMakeLists.txt  Makefile  README.md  arguments.c  arguments.h  canvas.c  canvas.h  commands.c  commands.h  draw.c  draw.h  formatting.c  formatting.h  large  main.c  paint.out  samplesave  saveload.c  saveload.h
